<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:background="@drawable/background"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:layout_editor_absoluteY="50dp"
                                                   tools:layout_editor_absoluteX="24dp">

    <com.google.android.material.textfield.TextInputEditText
            android:layout_width="290dp"
            android:background="@drawable/edit_text_bg"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:paddingTop="9dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white_opacity"
            android:paddingStart="28dp"
            android:inputType="text"
            android:hint="@string/login"
            android:ems="10"
            android:id="@+id/et_login"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="296dp"
            android:minHeight="48dp" app:layout_constraintHorizontal_bias="0.504"/>
    <com.google.android.material.textfield.TextInputEditText
            android:layout_width="290dp"
            android:background="@drawable/edit_text_bg"
            android:gravity="top"
            android:paddingTop="9dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white_opacity"
            android:paddingStart="28dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"

            android:ems="10"
            android:id="@+id/et_password"
            app:layout_constraintTop_toBottomOf="@+id/et_login" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="4dp"
            android:minHeight="48dp" app:layout_constraintHorizontal_bias="0.504"/>
    <com.google.android.material.button.MaterialButton
            android:background="@drawable/button_bg"
            android:gravity="top|center"
            android:paddingTop="3dp"
            android:textSize="17sp"
            android:textAllCaps="false"
            app:backgroundTint="@color/button_orange"
            android:text="@string/toEnter"
            android:layout_width="290dp"
            android:layout_height="77dp" android:id="@+id/login_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password" android:layout_marginTop="12dp"
            app:layout_constraintHorizontal_bias="0.504"/>
    <TextView
            android:text="@string/to_register"
            android:textColor="@color/text_blue"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tv_to_register"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="60dp"
            app:layout_constraintTop_toBottomOf="@+id/login_button"/>
    <TextView
            android:text="@string/no_acc"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tv_no_acc"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="72dp"
            app:layout_constraintTop_toBottomOf="@+id/login_button"/>
    <TextView
            android:text="@string/enter"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_enter"
            app:layout_constraintBottom_toTopOf="@+id/et_login" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.498"
            android:layout_marginBottom="28dp"/>
    <ImageView
            android:layout_width="340dp"
            android:layout_height="238dp" app:srcCompat="@drawable/enter_img" android:id="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492" android:layout_marginTop="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>