<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:tools="http://schemas.android.com/tools" android:background="@drawable/background"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">


    <com.google.android.material.textfield.TextInputEditText
            android:layout_width="290dp"
            android:background="@drawable/edit_text_bg"
            android:textColor="@color/white"
            android:textColorHint="@color/white_opacity"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:paddingTop="9dp"
            android:paddingStart="28dp"
            android:inputType="text"
            android:hint="@string/login"
            android:id="@+id/et_login"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="276dp"
            app:layout_constraintHorizontal_bias="0.495" android:minHeight="48dp"/>
    <com.google.android.material.textfield.TextInputEditText
            android:layout_width="290dp"
            android:background="@drawable/edit_text_bg"
            android:textColor="@color/white"
            android:textColorHint="@color/white_opacity"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:paddingTop="9dp"
            android:paddingStart="28dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:ems="10"
            android:id="@+id/et_password"
            app:layout_constraintTop_toBottomOf="@+id/et_login" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="4dp"
            app:layout_constraintHorizontal_bias="0.495" android:minHeight="48dp"/>
    <com.google.android.material.textfield.TextInputEditText
            android:layout_width="290dp"
            android:background="@drawable/edit_text_bg"
            android:textColor="@color/white"
            android:textColorHint="@color/white_opacity"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:paddingTop="9dp"
            android:paddingStart="28dp"
            android:inputType="number"
            android:hint="@string/number"
            android:ems="10"
            android:id="@+id/et_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/et_password" android:minHeight="48dp"/>
    <com.google.android.material.button.MaterialButton
            android:background="@drawable/button_bg"
            android:gravity="top|center"
            android:paddingTop="3dp"
            android:textSize="17sp"
            android:textAllCaps="false"
            android:text="@string/toRegister"
            android:layout_width="290dp"
            android:layout_height="77dp" android:id="@+id/register_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:backgroundTint="@color/button_orange"

            app:layout_constraintTop_toBottomOf="@+id/et_number" android:layout_marginTop="4dp"
            app:layout_constraintHorizontal_bias="0.504" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="Регистрация"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="208dp"/>
    <ImageView
            android:layout_width="267dp"
            android:layout_height="216dp" app:srcCompat="@drawable/registration_img" android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="4dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>